# sketchflow

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture.md  docker-compose.yml  main.py  pyproject.toml  tech_stack.md
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_enhance_request_logging_comprehensive_tracking.py
backend/app/: __init__.py  main.py
backend/app/core/: auth.py  config.py  db.py  llm_factory.py  logging_config.py  state_types.py
backend/app/models/: feedback.py  request_log.py
backend/app/prompts/: __init__.py  prompt_templates.py
backend/app/services/: conversion.py  graph_workflow.py  result_store.py
backend/app/services/agents/: __init__.py  describer_agent.py  drawio_generation_agent.py  drawio_syntax_validator_agent.py  generation_agent.py  (+13 more)
backend/scripts/: engine_ping.py  supabase_connect.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/public/: ads.txt
frontend/public/examples/: README.txt
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/src/components/: AuthProvider.tsx  ConversionForm.tsx  DiagramPreview.tsx  DrawioPreview.tsx  ExamplesCarousel.tsx  ExamplesGallery.tsx  ExamplesSwitcher.tsx  LucidchartPreview.tsx  MermaidPreview.tsx  PlantUMLPreview.tsx  SignInButton.tsx  SketchUpload.tsx  UserMenu.tsx
frontend/src/data/: examples.ts
frontend/src/lib/: supabaseClient.ts
frontend/src/types/: plantuml-encoder.d.ts
(+7 files in other folders)
