[project]
name = "sketchflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "langchain-anthropic==0.3.20",
    "langchain-core>=0.3.76",
    "langchain-openai==0.3.33",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.2.74",
    "langsmith>=0.1.0",
    "pillow==10.1.0",
    "pydantic==2.11.0",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
]
